--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -18,7 +18,7 @@
 
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="../node_modules/ngx-bar-rating/themes/br-default-theme.css"/>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
